added more code to build pages

--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
 	<body>
 		<header>
 			<div class="logo">
-				Jay M. Frimmel				
-			</div>
+				<h1>Jay M. Frimmel</h1>
+				</div>
 			<div class="nav">
 				<a href="index.html">About Me</a>
 				<a href="portfolio.html">Portfolio</a>
@@ -20,16 +20,16 @@
 
 		<div class="main">
 			<section>
-			
+				<h2>Contact Form</h2>			
 			</section>
 
 			<aside>
-			
-			</aside>
+				<h3>Connect With Me</h3>
+				</aside>
 		</div>
 
 		<footer>
-			
+			<p>Copyright 2017 Jay M. Frimmel</p>
 		</footer>
 
 	</body>
