--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<body>
 		<header>
 			<div class="logo">
-				Jay M. Frimmel				
-			</div>
+				<h1>Jay M. Frimmel</h1></div>
 			<div class="nav">
 				<a href="index.html">About Me</a>
 				<a href="portfolio.html">Portfolio</a>
@@ -20,16 +19,19 @@
 
 		<div class="main">
 			<section>
-			
+				<h2>About Me</h2>
+				<p>Welcome to my portfolio. I have been learning a lot about web site coding and have these examples to share with you.</p>
+
+				<p>Coding is a new career path for me and it has been quite a journey for me. Thanks for visiting!</p>			
 			</section>
 
 			<aside>
-			
+				<h3>Connect With Me</h3>
 			</aside>
 		</div>
 
 		<footer>
-			
+			<p>Copyright 2017 Jay M. Frimmel</p>
 		</footer>
 
 	</body>
