--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,7 @@
 	<body>
 		<header>
 			<div class="logo">
-				Jay M. Frimmel				
-			</div>
+				<h1>Jay M. Frimmel</h1>	</div>
 			<div class="nav">
 				<a href="index.html">About Me</a>
 				<a href="portfolio.html">Portfolio</a>
@@ -20,16 +19,16 @@
 
 		<div class="main">
 			<section>
-			
+				<h2>My Projects</h2>			
 			</section>
 
 			<aside>
-			
+				<h3>Connect With Me</h3>
 			</aside>
 		</div>
 
 		<footer>
-			
+			<p>Copyright 2017 Jay M. Frimmel</p>
 		</footer>
 
 	</body>
