added more code and images to all three pages

--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
 		<div class="main">
 			<section>
 				<h2>About Me</h2>
+					<img src="assets/images/IMG_0472.jpg" alt="Jay M. Frimmel" style="width:145px;height:115px;">
 				<p>Welcome to my portfolio. I have been learning a lot about web site coding and have these examples to share with you.</p>
 
-				<p>Coding is a new career path for me and it has been quite a journey for me. Thanks for visiting!</p>			
+				<p>Coding is a new career path for me and it has been quite a journey. I can also offer excellent research and collaborative skills since I am a trained librarian. Thanks for visiting!</p>			
 			</section>
 
 			<aside>
 				<h3>Connect With Me</h3>
+					<img src="assets/images/linkdin.png" alt="LinkedIn" style="width: 75px; height: 75px;">
+					<img src="assets/images/github-512.png" alt="GitHub" style="width: 75px; height: 75px;">
+					<img src="assets/images/stackoverflow.png" alt="StackkOverflow" style="width: 75px; height: 75px;"> 
+
 			</aside>
 		</div>
 
