--- a/contact.html
+++ b/contact.html
@@ -20,12 +20,37 @@
 
 		<div class="main">
 			<section>
-				<h2>Contact Form</h2>			
+
+			<div class="container">  
+  				<form id="contact" action="" method="post">
+   					 <h2>Quick Contact</h2>
+    					<fieldset>
+      						<input placeholder="Your name" type="text" tabindex="1" required autofocus>
+    					</fieldset>
+    					<fieldset>
+      						<input placeholder="Your Email Address" type="email" tabindex="2" required>
+    					</fieldset>
+    					<fieldset>
+      						<input placeholder="Your Web Site starts with http://" type="url" tabindex="4" required>
+    					</fieldset>
+   						 <fieldset>
+      						<textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
+    					</fieldset>
+    					<fieldset>
+      						<button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+    					</fieldset>
+  					</form>
+				</div>
+				</form>	
+
 			</section>
 
 			<aside>
 				<h3>Connect With Me</h3>
-				</aside>
+					<img src="assets/images/linkdin.png" alt="LinkedIn" style="width: 75px; height: 75px;">
+					<img src="assets/images/github-512.png" alt="GitHub" style="width: 75px; height: 75px;">
+					<img src="assets/images/stackoverflow.png" alt="StackkOverflow" style="width: 75px; height: 75px;"> 
+			</aside>
 		</div>
 
 		<footer>
