--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,9 @@
 
 			<aside>
 				<h3>Connect With Me</h3>
+					<img src="assets/images/linkdin.png" alt="LinkedIn" style="width: 75px; height: 75px;">
+					<img src="assets/images/github-512.png" alt="GitHub" style="width: 75px; height: 75px;">
+					<img src="assets/images/stackoverflow.png" alt="StackkOverflow" style="width: 75px; height: 75px;"> 
 			</aside>
 		</div>
 
